--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -1,11 +1,12 @@
 name: Build Docker Images
 
-on: 
-  - workflow_dispatch
-  - push
-  # schedule:
-  #   # https://crontab.guru/every-5-minutes
-  #   - cron:  '*/5 * * * *'
+on:
+  workflow_dispatch:
+  push:
+    branches:
+    - main
+  schedule:
+  - cron:  '*/5 * * * *'
 
 jobs:
   loadAgentsJson:
