--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -2,11 +2,11 @@ name: Build Docker Images
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-    - main
-  schedule:
-  - cron:  '*/3 * * * *'
+  # push:
+  #   branches:
+  #   - main
+  # schedule:
+  # - cron:  '*/3 * * * *'
 
 jobs:
   loadAgentsJson:
